fix: profile overflow

--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -3,10 +3,22 @@
   font-weight: 500;
   font-size: 42px;
   line-height: 48px;
+  max-width: 450px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
+
+@media screen and (max-width: 540px) {
+  .profile__name {
+    max-width: 350px;
+  }
+}
+
 
 @media screen and (max-width: 475px) {
   .profile__name {
+    max-width: 210px;
     font-size: 27px;
     line-height: 33px;
     margin: 0 10px 14px 0;
